<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loading">Loading..</string>
    <string name="activity_exception">"Not in an activity - unable to get Window reference"</string>
</resources>
